test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 30 Mar 2026 14:14:08 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="jUZvOnOSf38jfKFn/YFZsWCN5YLvKfpM", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}